fix(LIC-246): LIC: Legal Dev: Validation for Tenant name is overlapped with the Add new tenant button

--- a/MBE.LegalPortal.UI/src/app/components/application/add-application-instance/add-application-instance.component.scss
+++ b/MBE.LegalPortal.UI/src/app/components/application/add-application-instance/add-application-instance.component.scss
@@ -59,3 +59,6 @@
     }
   }
 }
+.mat-mdc-form-field-error-wrapper{
+  padding: 0!important;
+}
